--- a/contact/templates/contact/create.html
+++ b/contact/templates/contact/create.html
@@ -19,6 +19,10 @@
 						<label for="{{ field.id_for_label }}">{{ field.label }}</label>
 						{{ field }}
 						{{ field.errors }}
+						
+						{% if field.help_text %}
+							<p class="help-text">{{ field.help_text }}</p>
+						{% endif %}
 					</div>
 				{% endfor %}
 			</div>
@@ -33,12 +37,14 @@
 				</div>
 			{% endif %}
 
-			</div>
-			<div class="form-content">
-				<div class="form-group">
-					<button class="btn" type="submit">Send</button>
+				<div class="form-content">
+					<div class="form-group">
+						<button class="btn" type="submit">Send</button>
+					</div>
 				</div>
+				
 			</div>
+			
 			
 		</form>
 	</div>
