--- a/contact/templates/contact/register.html
+++ b/contact/templates/contact/register.html
@@ -3,12 +3,11 @@
 {% block content %}
 	<div class="form-wrapper">
 		
-		<h2>Contact</h2>
+		<h2>Register</h2>
 		
 		<form 
 			action="{{ form_action }}"
 			method="POST"
-			enctype="multipart/form-data"
 		>
 
 			{% csrf_token %}
@@ -23,13 +22,7 @@
 						{% if field.help_text %}
 							<p class="help-text">{{ field.help_text }}</p>
 						{% endif %}
-					</div>
-					
-					{% if field.name == 'picture' and field.value.url %}
-						<div class="form-group">
-							<img src="{{ field.value.url }}" alt="">
-						</div>
-					{% endif %}
+					</div>					
 				{% endfor %}
 			</div>
 
